--- a/JavaScript-Crud-Operation-main/index.htm
+++ b/JavaScript-Crud-Operation-main/index.htm
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link rel="icon" href="../53026577976.png">
     <title>
         Html CRUD with Pure JavaScript
     </title>
