--- a/search engine/search engine.html
+++ b/search engine/search engine.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="icon" href="../53026577976.png">
 		<title>Suivi PDR</title>
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -72,6 +73,7 @@
             { country: '', city: 'Axe', code: '', bh: '', bv: '', bg: 'Conditionnement', bf: 'Tetratop4', bq: 'Pince : Section emballage',bo: '21/05/2024', bui: 'Tanafaat'},
             { country: '', city: 'Poulie', code: '', bh: '', bv: '', bg: 'Conditionnement', bf: 'Tetratop4', bq: 'Pince : Section emballage',bo: '21/05/2024', bui: 'Tanafaat'},
             { country: '', city: 'Nozzle', code: '', bh: '', bv: '', bg: 'Conditionnement', bf: 'Tetratop5', bq: 'Buse de doseur:HCCU',bo: '16/05/2024', bui: 'Conducteur'},
+	    { country: 'rrr', city: 'Nozzle', code: '', bh: '', bv: '', bg: 'Conditionnement', bf: 'Tetratop5', bq: 'Buse de doseur:HCCU',bo: '16/05/2024', bui: 'Conducteur'},
             { country: '01067J', city: 'JOINT SMS', code: '12,49', bh: '2', bv: '24,98', bg: 'Poudrage', bf: '', bq: ' LAIT CRU TLC2 100T',bo: '22/05/2024', bui: 'Zakaria'}
     ];
 
