--- a/index.htm
+++ b/index.htm
@@ -45,7 +45,7 @@
           <a href="" class="nav-link">Topics</a>
         </li>
         <div class="nav-item">
-            <a href="./js-login-maine/index.html" class="nav-link">The Worker</a>
+            <a href="../CRUD-Bootstrapv5-JavaScript-Local-Storage-main/index.html" class="nav-link">The Worker</a>
         </div>
       </ul>
     </nav>
