--- a/index.htm
+++ b/index.htm
@@ -55,11 +55,10 @@
         <div class="content"><br><br><br>
           <h4>Centrale Danone</h4>
           <h1>
-            It is the Danone Central website that will help you a lot with anything you want
+            It is the Centrale Danone website that will help you with anything you want
           </h1>
           <p>
-            This site will suit you because it guarantees you
-            <span class="purple">Quality, speed and safety</span> While you are viewing the site
+            This site is specifically tailored for spare parts tracking,ensuring seamless maintenance operations
           </p>
           <button class="btn"><a href="./اعرف اكثر.htm">Find out more</a></button>
         </div>
