--- a/search engine/search engine.html
+++ b/search engine/search engine.html
@@ -38,7 +38,7 @@
 
 <center>
         
-     <h1 class="jumbotron p-5 bg-secondary text-white" >Central danone Suivi PDR</h1>
+     <h1 class="jumbotron p-5 bg-secondary text-white" >Centrale danone Suivi PDR</h1>
         
        <input type="text" class="form-control mb-5" ng-model="allKeywords" placeholder="Search...." />
 
