--- a/CRUD-Bootstrapv5-JavaScript-Local-Storage-main/index.html
+++ b/CRUD-Bootstrapv5-JavaScript-Local-Storage-main/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="../53026577976.png">
@@ -33,13 +32,14 @@
           </div>
         </div>
         <div class="textarea-field field">
-          <textarea name="" id="Message" cols="30" rows="8" placeholder="Message" class="item" autocomplete="off"></textarea>
+          <textarea name="" id="message" cols="30" rows="8" placeholder="Message" class="item" autocomplete="off"></textarea>
           <div class="error-txt">Message can't be blank</div>
         </div>
         <button type="submit">Send</button>
       </form>
     </section>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="script.js"></script>
   </body>
 </html>
