--- a/CRUD-Bootstrapv5-JavaScript-Local-Storage-main/index.html
+++ b/CRUD-Bootstrapv5-JavaScript-Local-Storage-main/index.html
@@ -13,27 +13,30 @@
       <form action="#">
         <div class="input-box">
           <div class="input-field field">
-            <input type="text" placeholder="Full Name" id="name" class="item" autocomplete="off">
+            <input type="text" placeholder="Item code" id="CodeArticle" class="item" autocomplete="off">
+            <input type="text" placeholder="unit price" id="PU" class="item" autocomplete="off">
             <div class="error-txt">Full name can't be blank</div>
           </div>
           <div class="input-field field">
-            <input type="text" placeholder="Email" id="email" class="item" autocomplete="off">
+            <input type="text" placeholder="Designation" id="Désignation" class="item" autocomplete="off">
+            <input type="number" placeholder="Qty" id="Qté" class="item" autocomplete="off">
             <div class="error-txt">Email can't be blank</div>
           </div>
         </div>
+        </div>
           <div class="input-box">
           <div class="input-field field">
-            <input type="text" placeholder="Phone" id="phone" class="item" autocomplete="off">
+            <input type="text" placeholder="Value" id="Valeur" class="item" autocomplete="off">
+            <input type="text" placeholder="Machine" id="Machine" class="item" autocomplete="off">
+            <input type="text" placeholder="Responsible" id="Responsable" class="item" autocomplete="off">
             <div class="error-txt">Phone can't be blank</div>
           </div>
           <div class="input-field field">
-            <input type="text" placeholder="subject" id="subject" class="item" autocomplete="off">
+            <input type="text" placeholder="Workshop" id="Atelier" class="item" autocomplete="off">
+            <input type="text" placeholder="Location" id="Emplacement" class="item" autocomplete="off">
+            <input type="date" placeholder="Date" id="Date" class="item" autocomplete="off">
             <div class="error-txt">subject can't be blank</div>
           </div>
-        </div>
-        <div class="textarea-field field">
-          <textarea name="" id="message" cols="30" rows="8" placeholder="Message" class="item" autocomplete="off"></textarea>
-          <div class="error-txt">Message can't be blank</div>
         </div>
         <button type="submit">Send</button>
       </form>
