--- a/index.htm
+++ b/index.htm
@@ -42,7 +42,7 @@
           <a href="About us.htm" class="nav-link">About us</a>
         </li>
         <div class="right-menu">
-          <button class="menu-button">More <i class="fa-solid fa-down-long" style="color: #ffffff;"></i></button>
+          <button class="menu-button">More</button>
           <div class="dropdown-menu">
             <a href="./Contact.htm">Contact us</a>
             <a href="./Topics.htm">Topics</a>
