--- a/index.htm
+++ b/index.htm
@@ -36,7 +36,7 @@
       </div>
       <ul class="nav-items">
         <li class="nav-item">
-          <a href="./js-login-main/index.html" class="nav-link">Search</a>
+          <a href="http://localhost/Suivi%20PDR/index.php" class="nav-link">Search</a>
         </li>
         <li class="nav-item">
           <a href="About us.htm" class="nav-link">About us</a>
