--- a/index.htm
+++ b/index.htm
@@ -124,7 +124,7 @@
           </div>
           <div class="quality">
             <i class="fa-regular fa-circle-question"></i>
-            <a href=""><h3>FAQ</h3></a>
+            <a href="./faq/index.htm"><h3>FAQ</h3></a>
             <p>Frequently asked questions</p>
           </div>
         </div>
