--- a/faq/index.htm
+++ b/faq/index.htm
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frequently Asked Questions</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="../53026577976.png">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -20,92 +21,51 @@
 
       <div class="faq">
         <button class="accordion">
-          What is Krushi?
+          What is the Centrale website?
           <i class="fa-solid fa-chevron-down"></i>
         </button>
         <div class="pannel">
           <p>
-            Krushi is a Public Charitable Trust designed to carry out farming on
-            extensive scale Natural & Sustainable methods.
+            Santar website is affiliated with Santar Danone
           </p>
         </div>
       </div>
 
       <div class="faq">
         <button class="accordion">
-          How does it work?
+          Does the site protect the user?
           <i class="fa-solid fa-chevron-down"></i>
         </button>
         <div class="pannel">
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis
-            saepe molestiae distinctio asperiores cupiditate consequuntur dolor
-            ullam, iure eligendi harum eaque hic corporis debitis porro
-            consectetur voluptate rem officiis architecto.
+            Yes, the site holds the user from all risks of everything
           </p>
         </div>
       </div>
 
       <div class="faq">
         <button class="accordion">
-          What are the major challanges of current agriculture?
+          Who is the website developer?
           <i class="fa-solid fa-chevron-down"></i>
         </button>
         <div class="pannel">
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis
-            saepe molestiae distinctio asperiores cupiditate consequuntur dolor
-            ullam, iure eligendi harum eaque hic corporis debitis porro
-            consectetur voluptate rem officiis architecto.
+            Btissam Ghazioui
           </p>
         </div>
       </div>
 
       <div class="faq">
         <button class="accordion">
-          How does the Krushi address the above challanges?
+          Does the site allow the user to communicate if a problem occurs?
           <i class="fa-solid fa-chevron-down"></i>
         </button>
         <div class="pannel">
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis
-            saepe molestiae distinctio asperiores cupiditate consequuntur dolor
-            ullam, iure eligendi harum eaque hic corporis debitis porro
-            consectetur voluptate rem officiis architecto.
+            Yes, the website contains contact us to solve any urgent problem
           </p>
         </div>
       </div>
-
-      <div class="faq">
-        <button class="accordion">
-          How can I be a part of Krushi?
-          <i class="fa-solid fa-chevron-down"></i>
-        </button>
-        <div class="pannel">
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis
-            saepe molestiae distinctio asperiores cupiditate consequuntur dolor
-            ullam, iure eligendi harum eaque hic corporis debitis porro
-            consectetur voluptate rem officiis architecto.
-          </p>
-        </div>
-      </div>
-
-      <div class="faq">
-        <button class="accordion">
-          How does it work?
-          <i class="fa-solid fa-chevron-down"></i>
-        </button>
-        <div class="pannel">
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis
-            saepe molestiae distinctio asperiores cupiditate consequuntur dolor
-            ullam, iure eligendi harum eaque hic corporis debitis porro
-            consectetur voluptate rem officiis architecto.
-          </p>
-        </div>
-      </div>
-    </div>
 
     <script>
       var acc = document.getElementsByClassName("accordion");
