--- a/index.htm
+++ b/index.htm
@@ -59,11 +59,10 @@
         <div class="content"><br><br><br>
           <h4>Danone Central</h4>
           <h1>
-            It is the Danone Central website that will help you a lot with anything you want
+            the Centrale Danone website is specifically designed to facilitate the management and tracking of spare parts.
           </h1>
           <p>
-            This site will suit you because it guarantees you
-            <span class="purple">Quality, speed and safety</span> While you are viewing the site
+            This site is a great innovation that will help you keep track of the status of each piece of equipment
           </p>
           <button class="btn"><a href="./اعرف اكثر.htm">Find out more</a></button>
         </div>
