--- a/index.htm
+++ b/index.htm
@@ -57,7 +57,7 @@
     <section class="hero">
       <div class="hero-section">
         <div class="content"><br><br><br>
-          <h4>Danone Central</h4>
+          <h4>Centrale Danone</h4>
           <h1>
             the Centrale Danone website is specifically designed to facilitate the management and tracking of spare parts.
           </h1>
