--- a/About us.htm
+++ b/About us.htm
@@ -1,16 +1,125 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Suivi PDR</title>
-    <link rel="stylesheet" href="serch.css">
+	<title>Suivi PDR</title>
     <link rel="icon" href="./53026577976.png">
+	<link rel="stylesheet" href="style.css" >
 </head>
+<style>
+	*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+body{
+	justify-content: center;
+	align-items: center;
+	display: flex;
+	min-height: 100vh;
+	font-family: 'Lato', sans-serif;
+	color: #fff;
+	overflow: hidden;
+	background: linear-gradient(to right, #24243e, #302b63, #0f0c29);
+}	
+.section{
+	position: relative;
+	width: 100%;
+	height: 100%;
+	display: flex;
+}
+.info{
+	position: relative;
+	width: 500px;
+	height: 350px;
+	padding: 20px;
+	margin: 20px;
+	border-radius: 10px;
+	border: 2px solid#fff;
+	box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.5);
+	animation: info-move 2s;
+}
+
+h1{
+	width: 30%;
+	margin: 20px 0;
+	border-bottom: 3px solid#fff;
+}
+
+button{
+	font-size: 16px;
+	color: #fff;
+	background-color: #3E013E;
+	padding: 10px;
+	margin:20px 0;
+	border:2px solid #fff;
+	transition: .2s ease-in-out;
+	cursor: pointer;
+}
+button:hover{
+	background-color: #3E0175;
+}
+
+.image img{
+	height: 380px;
+	width: 400px;
+}
+
+@keyframes info-move{
+	0%{
+	transform: translateX(-500px);
+	}
+
+100%{
+	transform: translateX(0px);
+	}
+}
+
+.image img:nth-child(1){
+	animation: left-img 3s;
+}
+.image img:nth-child(2){
+	animation: right-img 3s;
+	}
+
+@keyframes left-img{	
+0%{
+	transform: translateX(900px);
+
+	}
+
+100%{
+	transform: translateX(0px);
+
+	}
+}
+@keyframes right-img{	
+0%{
+	transform: translateX(500px);
+	}
+
+100%{
+	transform: translateX(0px);
+
+	}
+}
+</style>
 <body>
-    <h1>About us</h1>
-    <div class="text">
-        <p></p>
-    </div>
+	<div class="section">
+		<div class="info">
+			<h1>About us</h1>
+			<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consquat.</h3>
+			<button>Learn More</button>			
+		</div>
+		<div class="image">
+			<img src="https://www.freeiconspng.com/thumbs/book-png/book-png-18.png">
+			<img src="https://www.transparentpng.com/thumb/book-png/gYJvka-book-cut-out-png.png">
+		</div>
+	</div>
 </body>
-</html>
+</html><link rel="icon" href="./53026577976.png">
