--- a/faq/index.htm
+++ b/faq/index.htm
@@ -26,7 +26,7 @@
         </button>
         <div class="pannel">
           <p>
-            Santar website is affiliated with Santar Danone
+            Centrale website is affiliated with centrale Danone
           </p>
         </div>
       </div>
