--- a/index.htm
+++ b/index.htm
@@ -118,7 +118,7 @@
           </div>
           <div class="quality">
             <i class="fa-solid fa-code"></i>
-            <a href=""><h3>developer</h3></a>
+            <a href="./Project Files/Index.htm"><h3>developer</h3></a>
             <p>Who is the website developer</p>
           </div>
           <div class="quality">
