--- a/About us.htm
+++ b/About us.htm
@@ -108,9 +108,7 @@ button:hover{
 	<div class="section">
 		<div class="info">
 			<h1>About us</h1>
-			<h3>Ibtisam is a professional web developer distinguished by her high skills and extensive experience in web design and development. She has a unique ability to blend visual aesthetics with functional performance, making her websites outstanding and user-friendly.
-
-Ibtisam works diligently to stay updated with the latest programming technologies and best design practices, enabling her to deliver innovative solutions that meet clients' needs and exceed their expectations. With her passion for details and precision in her work, Ibtisam can turn ideas into reality by creating interactive and attractive websites that help achieve business goals and enhance their digital presence.</h3>
+			<h3>Ibtisam is a professional web developer distinguished by her high skills and extensive experience in web design and development. She has a unique ability to blend visual aesthetics with functional performance, making her websites outstanding and user-friendly.</h3>
 			<button>Learn More</button>			
 		</div>
 		<div class="image">
