--- a/index.htm
+++ b/index.htm
@@ -59,7 +59,7 @@
         <div class="content"><br><br><br>
           <h4>Centrale Danone</h4>
           <h1>
-            the Centrale Danone website is specifically designed to facilitate the management and tracking of spare parts.
+            The Centrale Danone website is specifically designed to facilitate the management and tracking of spare parts.
           </h1>
           <p>
             This site is a great innovation that will help you keep track of the status of each piece of equipment
