--- a/index.htm
+++ b/index.htm
@@ -108,7 +108,7 @@
         <div class="qualities">
           <div class="quality">
             <i class="fa-solid fa-globe"></i>
-            <a href=""><h3>About the site</h3></a>
+            <a href="./about the site.htm"><h3>About the site</h3></a>
             <p>Know the whole site</p>
           </div>
           <div class="quality">
