--- a/index.htm
+++ b/index.htm
@@ -49,7 +49,7 @@
           </div>
         </div>
         <div class="nav-item">
-            <a href="./CRUD-Bootstrapv5-JavaScript-Local-Storage-main/index.html" class="nav-link">The Worker</a>
+            <a href="./js-login-maine" class="nav-link">The Worker</a>
         </div>
       </ul>
     </nav>
