--- a/index.htm
+++ b/index.htm
@@ -45,7 +45,7 @@
           <button class="menu-button">More</button>
           <div class="dropdown-menu">
             <a href="./Contact.htm">Contact us</a>
-            <a href="./Topics.htm">Topics</a>
+            <a href="">Topics</a>
           </div>
         </div>
         <div class="nav-item">
