--- a/About us.htm
+++ b/About us.htm
@@ -108,7 +108,7 @@ button:hover{
 	<div class="section">
 		<div class="info">
 			<h1>About us</h1>
-			<h3>Ibtisam is a professional web developer distinguished by her high skills and extensive experience in web design and development. She has a unique ability to blend visual aesthetics with functional performance, making her websites outstanding and user-friendly.</h3>
+			<h3>professional web developer distinguished by her high skills and extensive experience in web design and development. She has a unique ability to blend visual aesthetics with functional performance, making her websites outstanding and user-friendly.</h3>
 			<button>Learn More</button>			
 		</div>
 		<div class="image">
