--- a/Homepage.htm
+++ b/Homepage.htm
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <title>Suivi PDR</title>
+<title>Suivi-PDR</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
